# TagFi

./: CMakeLists.txt  Consts.c  Consts.h  CryptOps.c  CryptOps.h  FiDiMasks.c  FiDiMasks.h  FiForms.c  FiForms.h  FiOps.h  Lattice.c  Lattice.h  Options.c  Options.h  Profiling.c  Profiling.h  README.md  RspOps.c  RspOps.h  chkmk_didmap.c  chkmk_didmap.h  consts.c  consts.h  fi_lattice.c  fi_lattice.h  fidi_masks.c  fidi_masks.h  fiforms.c  fiforms.h  jlm_random.c  jlm_random.h  lattice_cmds.c  lattice_cmds.h  lattice_nodes.c  lattice_nodes.h  lattice_reqs.c  lattice_reqs.h  lattice_rsps.c  lattice_rsps.h  lattice_sessions.c  (+17 more)
BKUP/: lattice_cmds.h
BKUP/GoneButNotForgotten/: lattice_cmds.c  lattice_cmds.h
config_ctl/: config_ctl.py  count_file_forms.py  preparam_count_fiforms.sh
count_fi_forms/: count_file_forms.py  fiforms_template  preparam_count_fiforms.sh
scripts/: rmnode.sh
